Removed eclipse.ant from pom-plain